--- a/assets/test.html
+++ b/assets/test.html
@@ -259,6 +259,16 @@
 
 
     $('#login-button').click(function(event){
+        login();
+    })
+
+   $('#email').on('keypress', function (e) {
+         if(e.which === 13){
+            login();
+         }
+   });
+
+    var login = function(){
        window.username = $("#email").val()
        if ( window.username && window.username.length > 0){
            $('#login').toggle()
@@ -292,15 +302,6 @@
                 var err = textStatus + ", " + error;
                 console.log( "Request Failed: " + err );
             });
-
-
-
-
-
-
-
-
-
 
        }else{
         alert('bad username')
