--- a/assets/test.html
+++ b/assets/test.html
@@ -284,7 +284,7 @@
 
 
             }
-            triples = '<h5>All Triples:</h5>' + triples
+            triples = '<h5>All NT Triples:</h5>' + triples
             $("#triples-all").html(triples);
 
 
